# wa_sales_tax

./: LICENSE  README.md  pyproject.toml
src/: load_naics.py  process_naics.py  process_wa_tax.py  scrape_naics.sh  scrape_wa_tax.py
