[project]
name = "wa-sales-tax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.2",
    "fastexcel>=0.18.0",
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
    "polars>=1.36.1",
    "requests>=2.32.5",
]
